# LocalSearch

./: CMakeLists.txt  LocalSearch.cpp  LocalSearch.h  PizzaState.cpp  PizzaState.h  README.md  SimulatedAnnealing.h  State.h  TestState.cpp  TestState.h  main.cpp  plotter.py
local_search/: HillClimbing.cpp  HillClimbing.h  LocalSearch.cpp  LocalSearch.h  Operator.h  PizzaState.cpp  PizzaState.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  State.cpp  State.h
